--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,23 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+
+# output folder
+output/
+data/audioset/
+
+# data files
+*.mp3
+*.zip
+*.h5
+*.npz
+*.wav
+*.flac
+*.tgz
+*.csv
+
+# nano files
+*.swp
